// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconClock /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128 7.3C61.3 7.3 7.3 61.3 7.3 128s54 120.8 120.7 120.8S248.8 194.7 248.8 128 194.7 7.3 128 7.3zm0 216.6c-53 0-95.9-42.9-95.9-95.9S75 32.1 128 32.1 223.9 75 223.9 128 181 223.9 128 223.9zM128 50c-43.1 0-78 34.9-78 78s34.9 78 78 78 78-34.9 78-78-34.9-78-78-78zm53.3 92.3h-69v-69h21v50h48v19z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconClock /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconClock /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128 7.3C61.3 7.3 7.3 61.3 7.3 128s54 120.8 120.7 120.8S248.8 194.7 248.8 128 194.7 7.3 128 7.3zm0 216.6c-53 0-95.9-42.9-95.9-95.9S75 32.1 128 32.1 223.9 75 223.9 128 181 223.9 128 223.9zM128 50c-43.1 0-78 34.9-78 78s34.9 78 78 78 78-34.9 78-78-34.9-78-78-78zm53.3 92.3h-69v-69h21v50h48v19z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconClock /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconClock /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128 7.3C61.3 7.3 7.3 61.3 7.3 128s54 120.8 120.7 120.8S248.8 194.7 248.8 128 194.7 7.3 128 7.3zm0 216.6c-53 0-95.9-42.9-95.9-95.9S75 32.1 128 32.1 223.9 75 223.9 128 181 223.9 128 223.9zM128 50c-43.1 0-78 34.9-78 78s34.9 78 78 78 78-34.9 78-78-34.9-78-78-78zm53.3 92.3h-69v-69h21v50h48v19z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconClock /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconClock /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128 7.3C61.3 7.3 7.3 61.3 7.3 128s54 120.8 120.7 120.8S248.8 194.7 248.8 128 194.7 7.3 128 7.3zm0 216.6c-53 0-95.9-42.9-95.9-95.9S75 32.1 128 32.1 223.9 75 223.9 128 181 223.9 128 223.9zM128 50c-43.1 0-78 34.9-78 78s34.9 78 78 78 78-34.9 78-78-34.9-78-78-78zm53.3 92.3h-69v-69h21v50h48v19z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconClock /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconClock /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128 7.3C61.3 7.3 7.3 61.3 7.3 128s54 120.8 120.7 120.8S248.8 194.7 248.8 128 194.7 7.3 128 7.3zm0 216.6c-53 0-95.9-42.9-95.9-95.9S75 32.1 128 32.1 223.9 75 223.9 128 181 223.9 128 223.9zM128 50c-43.1 0-78 34.9-78 78s34.9 78 78 78 78-34.9 78-78-34.9-78-78-78zm53.3 92.3h-69v-69h21v50h48v19z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconClock /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconClock /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128 7.3C61.3 7.3 7.3 61.3 7.3 128s54 120.8 120.7 120.8S248.8 194.7 248.8 128 194.7 7.3 128 7.3zm0 216.6c-53 0-95.9-42.9-95.9-95.9S75 32.1 128 32.1 223.9 75 223.9 128 181 223.9 128 223.9zM128 50c-43.1 0-78 34.9-78 78s34.9 78 78 78 78-34.9 78-78-34.9-78-78-78zm53.3 92.3h-69v-69h21v50h48v19z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconClock /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconClock /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128 7.3C61.3 7.3 7.3 61.3 7.3 128s54 120.8 120.7 120.8S248.8 194.7 248.8 128 194.7 7.3 128 7.3zm0 216.6c-53 0-95.9-42.9-95.9-95.9S75 32.1 128 32.1 223.9 75 223.9 128 181 223.9 128 223.9zM128 50c-43.1 0-78 34.9-78 78s34.9 78 78 78 78-34.9 78-78-34.9-78-78-78zm53.3 92.3h-69v-69h21v50h48v19z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconClock /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconClock /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128 7.3C61.3 7.3 7.3 61.3 7.3 128s54 120.8 120.7 120.8S248.8 194.7 248.8 128 194.7 7.3 128 7.3zm0 216.6c-53 0-95.9-42.9-95.9-95.9S75 32.1 128 32.1 223.9 75 223.9 128 181 223.9 128 223.9zM128 50c-43.1 0-78 34.9-78 78s34.9 78 78 78 78-34.9 78-78-34.9-78-78-78zm53.3 92.3h-69v-69h21v50h48v19z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconClock /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconClock /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128 7.3C61.3 7.3 7.3 61.3 7.3 128s54 120.8 120.7 120.8S248.8 194.7 248.8 128 194.7 7.3 128 7.3zm0 216.6c-53 0-95.9-42.9-95.9-95.9S75 32.1 128 32.1 223.9 75 223.9 128 181 223.9 128 223.9zM128 50c-43.1 0-78 34.9-78 78s34.9 78 78 78 78-34.9 78-78-34.9-78-78-78zm53.3 92.3h-69v-69h21v50h48v19z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconClock /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconClock /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128 7.3C61.3 7.3 7.3 61.3 7.3 128s54 120.8 120.7 120.8S248.8 194.7 248.8 128 194.7 7.3 128 7.3zm0 216.6c-53 0-95.9-42.9-95.9-95.9S75 32.1 128 32.1 223.9 75 223.9 128 181 223.9 128 223.9zM128 50c-43.1 0-78 34.9-78 78s34.9 78 78 78 78-34.9 78-78-34.9-78-78-78zm53.3 92.3h-69v-69h21v50h48v19z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconClock /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconClock /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128 7.3C61.3 7.3 7.3 61.3 7.3 128s54 120.8 120.7 120.8S248.8 194.7 248.8 128 194.7 7.3 128 7.3zm0 216.6c-53 0-95.9-42.9-95.9-95.9S75 32.1 128 32.1 223.9 75 223.9 128 181 223.9 128 223.9zM128 50c-43.1 0-78 34.9-78 78s34.9 78 78 78 78-34.9 78-78-34.9-78-78-78zm53.3 92.3h-69v-69h21v50h48v19z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconClock /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconClock /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128 7.3C61.3 7.3 7.3 61.3 7.3 128s54 120.8 120.7 120.8S248.8 194.7 248.8 128 194.7 7.3 128 7.3zm0 216.6c-53 0-95.9-42.9-95.9-95.9S75 32.1 128 32.1 223.9 75 223.9 128 181 223.9 128 223.9zM128 50c-43.1 0-78 34.9-78 78s34.9 78 78 78 78-34.9 78-78-34.9-78-78-78zm53.3 92.3h-69v-69h21v50h48v19z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconClock /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
